--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,6 +12,7 @@ ext {
     rxAndroidVersion = '2.0.1'
     javaxAnnotationVersion = '1.0'
     javaxInjectVersion = '1'
+    jodaVersion = '2.10.10'
     gsonVersion = '2.8.1'
     okHttpVersion = '3.8.1'
     androidAnnotationsVersion = '21.0.3'
@@ -56,6 +57,7 @@ ext {
     presentationDependencies = [
             daggerCompiler:     "com.google.dagger:dagger-compiler:${daggerVersion}",
             dagger:             "com.google.dagger:dagger:${daggerVersion}",
+            joda:               "joda-time:joda-time:$jodaVersion",
             okHttp:             "com.squareup.okhttp3:okhttp:${okHttpVersion}",
             okHttpLogger:       "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
             gson:               "com.google.code.gson:gson:${gsonVersion}",
@@ -79,8 +81,9 @@ ext {
     ]
 
     dataDependencies = [
-            coroutinesAndroid:  "org.jetbrains.kotlinx:kotlinx-coroutines-android:${kotlinVersion}",
-            coroutinesCore:     "org.jetbrains.kotlinx:kotlinx-coroutines-core:${kotlinVersion}",
+            coroutinesAndroid:  "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinVersion",
+            coroutinesCore:     "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinVersion",
+            joda:               "joda-time:joda-time:$jodaVersion",
             roomCompiler:       "androidx.room:room-compiler:$roomVersion",
             roomKtx:            "androidx.room:room-ktx:$roomVersion",
             roomRuntime:        "androidx.room:room-runtime:$roomVersion",
