--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation project(':data')
     implementation project(':domain')
 
+    def presentationDependencies = rootProject.ext.presentationDependencies
+
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
@@ -53,7 +55,7 @@ dependencies {
     kapt "com.airbnb.android:epoxy-processor:$epoxy_version"
 
     // Joda Time
-    implementation "joda-time:joda-time:$joda_time_version"
+    implementation presentationDependencies.joda
 
     // Koin
     implementation "org.koin:koin-core:$koin_version"
